// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ApplicationUsagePlugin/public click handler 1`] = `
Object {
  "appId": "test",
  "numberOfClicks": 0,
  "startTime": Any<hooks>,
}
`;

exports[`ApplicationUsagePlugin/public click handler 2`] = `
Object {
  "appId": "test",
  "numberOfClicks": 1,
  "startTime": Any<hooks>,
}
`;

exports[`ApplicationUsagePlugin/public hashchange handler => when there is an "infra" app (and hash) 1`] = `
Object {
  "appId": "test",
  "numberOfClicks": 0,
  "startTime": Any<hooks>,
}
`;

exports[`ApplicationUsagePlugin/public hashchange handler => when there is an "infra" app (and new hash) 1`] = `
Object {
  "appId": "testInfraPlugin",
  "numberOfClicks": 0,
  "startTime": Any<hooks>,
}
`;

exports[`ApplicationUsagePlugin/public hashchange handler => when there is an "infra" app (and no hash change) 1`] = `
Object {
  "appId": "test",
  "numberOfClicks": 0,
  "startTime": Any<hooks>,
}
`;

exports[`ApplicationUsagePlugin/public the currentUsage should be initially undefined until an app is changed 1`] = `
Object {
  "appId": "test-app",
  "numberOfClicks": 0,
  "startTime": Any<hooks>,
}
`;

exports[`ApplicationUsagePlugin/public visibilitychange handler => visible 1`] = `
Object {
  "appId": "testInfraPlugin",
  "numberOfClicks": 0,
  "startTime": Any<hooks>,
}
`;
